--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Hyblab server",
+  "name": "Hyblab_server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.10.2",
+    "basic-auth-connect": "^1.0.0",
+    "express": "^4.10.2"
   },
   "devDependencies": {},
   "scripts": {
